// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disabled 1`] = `
<div
  className="InputField__InputBox-xsvhdm-0 jMqyAe"
>
  <label>
    <input
      className="InputField__Input-xsvhdm-1 dmqiXI"
      disabled={true}
      onChange={[Function]}
      placeholder="Input field"
      type="text"
    />
  </label>
</div>
`;

exports[`hasError 1`] = `
<div
  className="InputField__InputBox-xsvhdm-0 jMqyAe"
>
  <label>
    <input
      className="InputField__Input-xsvhdm-1 dmqiXI"
      disabled={false}
      onChange={[Function]}
      placeholder="Input field"
      type="text"
    />
    <span
      className="InputField__ErrorMessage-xsvhdm-2 jRXaMi"
    >
      has error!
    </span>
  </label>
</div>
`;

exports[`normal 1`] = `
<div
  className="InputField__InputBox-xsvhdm-0 jMqyAe"
>
  <label>
    <input
      className="InputField__Input-xsvhdm-1 dmqiXI"
      disabled={false}
      onChange={[Function]}
      placeholder="Input field"
      type="text"
    />
  </label>
</div>
`;

exports[`readOnly 1`] = `
<div
  className="InputField__InputBox-xsvhdm-0 jMqyAe"
>
  <label>
    <input
      className="InputField__Input-xsvhdm-1 jmKEkY"
      disabled={false}
      onChange={[Function]}
      placeholder="Input field"
      type="text"
    />
  </label>
</div>
`;
